  had a syntax error.
- added a -c/--check option to the sleep interpreter to specify the script
  should be parsed and checked for syntax errors but not run.
- &add now behaves as documented, if no index is specified then the value
  is added to the beginning of the array (and not the end as in push).
- HOES method resolution now matches 1 character sleep strings as Java 
  characters.

2.1-beta 8  (29 Oct 06)
===========
- when packing an unsigned integer the argument is now interpreted as a long
  (and cast to an int) rather than an int (since an unsigned integer can be
  "bigger" than a normal java integer).  
- fixed a parser ambiguity with hash literals i.e. %(...) and arithmetic
  consisting of ... % (...).  both now work as they should.
- fixed assignment loops creating an extra non-needed stack frame
- added a sanity check to the assignment step, checks for a "corrupted"
  assignment stack, most commonly caused by forgetting to terminate the 
  assigned expression with a semicolon.
- added BridgeUtilities.extractNamedParameters(Stack args) to extract all
  named parameters from a stack of arguments.
- changed string representation of closures to represent: 
  &closureX:N-M where X represents the instantiation number (i.e. closure 3)
  and N-M represents the line range where the closure was declared
- updated &invoke to accept the following named parameters:
  parameter => %() - accepts a hashmap of $scalars to send as named parameters
  $this => &closure - accepts a closure to use as $this when executing the
     function.  essentially forces the called function to share environments
     with &closure for the duration of the execution.
  message => "some string" - the message value to send to the called function
- updated the sleep console with an ehanced 'help' command and a command 'debug'
  to set the debug level of a script.
- one can now specify a $this => &closure with &lambda to force the new closure