@@ -1,32 +1,32 @@
 Trace: [java.lang.Math pow: 3, 4] = 81.0 at line 6
 81.0
-Trace: [java.io.PrintStream@a61172 println: 81.0] at line 6
+Trace: [java.io.PrintStream@bf053f println: 81.0] at line 6
 Trace: &casti(1, 'z') = true at line 9
 true
-Trace: [java.io.PrintStream@a61172 println: true] at line 9
+Trace: [java.io.PrintStream@bf053f println: true] at line 9
 Trace: &casti(0, 'z') = false at line 10
 false
-Trace: [java.io.PrintStream@a61172 println: false] at line 10
+Trace: [java.io.PrintStream@bf053f println: false] at line 10
 Trace: &casti(1, 'd') = 1.0 at line 13
 1.0
-Trace: [java.io.PrintStream@a61172 println: 1.0] at line 13
+Trace: [java.io.PrintStream@bf053f println: 1.0] at line 13
 Trace: &casti(1, 'b') = 1 at line 16
 1
-Trace: [java.io.PrintStream@a61172 println: 1] at line 16
+Trace: [java.io.PrintStream@bf053f println: 1] at line 16
 Trace: &casti(100, 'f') = 100.0 at line 19
 100.0
-Trace: [java.io.PrintStream@a61172 println: 100.0] at line 19
+Trace: [java.io.PrintStream@bf053f println: 100.0] at line 19
 Trace: &casti('b', 'c') = b at line 22
 b
-Trace: [java.io.PrintStream@a61172 println: b] at line 22
+Trace: [java.io.PrintStream@bf053f println: b] at line 22
 Trace: &casti(63, 'i') = 63 at line 25
 63
-Trace: [java.io.PrintStream@a61172 println: 63] at line 25
+Trace: [java.io.PrintStream@bf053f println: 63] at line 25
 this is a string y0
-Trace: [java.io.PrintStream@a61172 println: 'this is a string y0'] at line 28
+Trace: [java.io.PrintStream@bf053f println: 'this is a string y0'] at line 28
 Trace: [new java.lang.StringBuilder: 'test'] = test at line 31
 test
-Trace: [java.io.PrintStream@a61172 println: test] at line 31
-Trace: &cast(@('a', 'b', 'c', 'd'), 'c') = [C@f54c5f at line 34
+Trace: [java.io.PrintStream@bf053f println: test] at line 31
+Trace: &cast(@('a', 'b', 'c', 'd'), 'c') = [C@9cd75a at line 34
 abcd
-Trace: [java.io.PrintStream@a61172 println: [C@f54c5f] at line 34
+Trace: [java.io.PrintStream@bf053f println: [C@9cd75a] at line 34
